Fixed z-indexing

--- a/LitExplore/Client/Connections/ConnectionLine.razor.css
+++ b/LitExplore/Client/Connections/ConnectionLine.razor.css
@@ -2,7 +2,6 @@
     position: fixed;
     margin-left: 23pt;
     margin-top: 30pt;
-    z-index: 2;
 }
 
 line {
